fix charts and emoji problem

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 			<div class="spinner"></div>
 		</div>
 
-		<div class="albanian results hidden">
+		<div class="albanian results hidden" id="albanian">
 			<h2>Albanian</h2>
 			<div id="albanian-sentiment" class="smiley"></div>
 			<div id="albanian-text"></div>
@@ -42,7 +42,7 @@
 			<canvas id="albanian-bar-chart" width="500" height="500"></canvas>
 		</div>
 
-		<div class="english results hidden">
+		<div class="english results hidden" id="english">
 			<h2>English</h2>
 			<div id="english-sentiment" class="smiley"></div>
 			<div id="english-text"></div>
